[tool.poetry]
name = "les-stats"
version = "0"
description = "Tournament statistics"
authors = ["Ludovic Ortega <ludovic.ortega@lyon-esport.fr>"]
license = "CeCILL"
readme = "README.md"
homepage = "https://github.com/lyon-esport/stats"
repository = "https://github.com/lyon-esport/stats"
keywords = ["lol", "esport", "statistics"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
    "Topic :: Utilities",
]
include = [
    "LICENSE",
    "LICENSE.fr",
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = ">=0.88,<0.96"}
httpx = "^0.23.1"
sentry-sdk = "^1.11.1"
asyncclick = "^8.1.3.4"
tortoise-orm = "^0.19.2"
prometheus-client = ">=0.15,<0.17"
uvicorn = {version = ">=0.20,<0.22", extras = ["standard"]}
colorama = {version = "^0.4.6", markers = "sys.platform == 'win32'"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pre-commit = ">=2.19,<4.0"
anyio = "^3.6.1"
pytest-asyncio = ">=0.18.3,<0.22.0"
pytest-httpx = "^0.21.0"
asgi-lifespan = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
